# slack-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
