[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
dependencies = [
  "fastmcp>=2.13.0",
  "fastapi>=0.115.0",
  "slack-sdk>=3.33.5",
  "python-dotenv>=1.0.0",
  "aiohttp>=3.9.0",
]
description = "Slack MCP Server with OAuth authentication"
name = "slack-mcp"
readme = "README.md"
requires-python = ">=3.10"
version = "1.0.0"

[[project.authors]]
name = "Aaron Wang"

[project.license]
text = "Apache-2.0"

[project.scripts]
slack-mcp = "main:main"

[tool.setuptools]
packages = ["auth"]
py-modules = ["main", "slack_tools"]

[project.optional-dependencies]
dev = ["ruff>=0.12.4"]
test = ["pytest>=8.0.0"]
